add gradle support with building, running Deku class and checkstyle